--- a/index.html
+++ b/index.html
@@ -62,12 +62,18 @@
       </a>
     </div>
     <div class="item">
+      <a href="twitch.html">
+        <div class="image-container loading-icon"><img src="https://puu.sh/I6dl5/4d97e304b0.gif" alt="miniscroller"></div>
+        <span>Twitch Channel Branding</span>
+      </a>
+    </div>
+              <!-- Row 2 -->
+    <div class="item">
       <a href="anime-omake.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
         <span>Anime Omake - IGN Video Series</span>
       </a>
     </div>
-          <!-- Row 2 -->
           <div class="item">
             <a href="up-at-noon.html">
               <div class="image-container loading-icon"><img src="https://media.giphy.com/media/hrXqOivq9pYBMz0w5Q/source.gif" alt="up at noon"></div>
@@ -81,6 +87,7 @@
           <span>Motion Manga, Art, and GIFs (for fun!)</span>
         </a>
       </div>
+                 <!-- Row 3 -->
       <div class="item">
         <a href="e3-booth.html">
           <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png" alt="e3 booth monitors"></div>
@@ -99,7 +106,6 @@
           <span>Suiting Up - IGN Video Series</span>
         </a>
       </div>
-           <!-- Row 3 -->
      <div class="item">
       <a href="strive-for-five.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
@@ -143,12 +149,6 @@
       </a>
     </div>
 
-     <div class="item">
-        <a href="miniscroller.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="miniscroller"></div>
-          <span>Miniscrollers</span>
-        </a>
-      </div>
 
 
       
