--- a/twitch.html
+++ b/twitch.html
@@ -51,102 +51,29 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>YouTube & Twitch Gaming Commissions</h2>
-        <p>Select commissions done for gaming streamers.
-          Static character art was provided by clients with permission to animate.</p>
+        <h2>Twitch Channel Branding</h2>
+        <p>
+          Design and animation I did for my own personal Twitch channel's branding.</p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
+        <p>My profile panels that I designed in Illustrator.  I wanted something simple but eyecatching.</p>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
-        </div>
-        <!-- Row 2 -->
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/TJm06K5LOAkzmCAihc/source.gif">
-        </div>
-        <!-- Row 3 -->
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kumateddi-for-tumblr_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/c5ccb1bc950e6742a756f89b77a313ac/tumblr_pv276yUUUh1vihf3to1_540.gif">
-        </div>
-        <!-- Row 4 -->
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/3CUKhMAnnFs0bkg7rD/giphy.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/cArlRP5R1BDtH3ukt6/giphy.gif">
-        </div>
-        <!-- Row 5 -->
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/8cddMic7kpmOFU7qZY/giphy.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/3b297911a362f27f4ce7020aea910304/tumblr_pmffnpw9Yx1vihf3to1_540.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/9DruQECt28WbK5iIpa/giphy.gif">
+          <img src="https://64.media.tumblr.com/1c0460de6467e00e4e57a5cfb4d86363/8baf8adf36b43663-c9/s1280x1920/d5362afc5e58b7767e86d6882edd2b05e60c5463.png">
         </div>
 
-
-        <div class="art-sub-header">
-          <p>Select outro commissions done for YouTubers.</p>
+        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display in my streams.  I wanted something bright, colorful, and cute that matched the aesthetics of my channel. These were them imported into After Effects where I did the motion graphics and created all the background assets. </p>
+        <div class="full-image loading-icon">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/I6d5S/f64972c596.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/cyolism-outro_orig.gif">
-        </div>
-        <!-- Row 6 -->
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/lasean-outro_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/YP2UvaTRT2oUaz8HnR/source.gif">
-        </div>
-        <!-- Row 7 -->
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/meilzbeauty-outro_orig.gif">
+          <img src="https://64.media.tumblr.com/51a61706e91522d5ce8a26e9868b2ae3/8baf8adf36b43663-f4/s1280x1920/2358f1678844f32b3391361143f102b40c5e2d4d.png">
         </div>
 
+        
 
-
-
-        <div class="art-sub-header">
-          <p>Twitch commissions for streamers.</p>
-        </div>
-          <div class="half-image loading-icon">
-            <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
-          </div>
-          <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/tweet-me-1_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/image-processing20191030-22252-1ymgmj7_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/gamingmama-540_orig.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberry-weebly-2_orig.gif">
-        </div>
 
 
       </div>
