--- a/twitch.html
+++ b/twitch.html
@@ -58,7 +58,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <p>My profile panels that I designed in Illustrator.  I wanted something simple but eyecatching.</p>
-        <div class="half-image loading-icon">
+        <div class="full-image loading-icon">
           <img src="https://64.media.tumblr.com/1c0460de6467e00e4e57a5cfb4d86363/8baf8adf36b43663-c9/s1280x1920/d5362afc5e58b7767e86d6882edd2b05e60c5463.png">
         </div>
 
@@ -68,7 +68,7 @@
             <source src="https://puu.sh/I6d5S/f64972c596.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="half-image loading-icon">
+        <div class="full-image loading-icon">
           <img src="https://64.media.tumblr.com/51a61706e91522d5ce8a26e9868b2ae3/8baf8adf36b43663-f4/s1280x1920/2358f1678844f32b3391361143f102b40c5e2d4d.png">
         </div>
 
