--- a/twitch.html
+++ b/twitch.html
@@ -53,11 +53,11 @@
       <div class="art-header">
         <h2>Twitch Channel Branding</h2>
         <p>
-          Design and animation I did for my own personal Twitch channel's branding.</p>
+          Design and animation I did for my own personal Twitch channel's branding.
+          Below are my profile panels that I designed in Illustrator.  I wanted something simple but eyecatching.</p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
-        <p>My profile panels that I designed in Illustrator.  I wanted something simple but eyecatching.</p>
         <div class="full-image loading-icon">
           <img src="https://64.media.tumblr.com/1c0460de6467e00e4e57a5cfb4d86363/8baf8adf36b43663-c9/s1280x1920/d5362afc5e58b7767e86d6882edd2b05e60c5463.png">
         </div>
