--- a/anime-omake.html
+++ b/anime-omake.html
@@ -207,8 +207,11 @@
             <p>Animated snipe advertising the show's sponsor.  I used the ribbon theme that was explored during logo drafts.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/GoHNf/1451d4f204.gif">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/I6dup/f17d2a7030.mp4" type="video/mp4">
+          </video>
         </div>
+
         <!-- Row 11 -->
         <div class="art-sub-header">
           <p>Animated lower thirds templatized for easy use and text editing for the Video Team.</p>
