--- a/twitch.html
+++ b/twitch.html
@@ -53,19 +53,18 @@
       <div class="art-header">
         <h2>Twitch Channel Branding</h2>
         <p>
-          Design and animation I did for my own personal Twitch channel's branding.
-          Below are my profile panels that I designed in Illustrator.  I wanted something simple but eyecatching.</p>
+          Design and animation I did for my own personal Twitch channel's branding.<br>
+          Below are my profile panels that I designed in Illustrator.  I wanted something simple, consistent, and eyecatching.</p>
       </div>
       <div class="art-display">
-        <!-- Row 1 -->
         <div class="full-image loading-icon">
           <img src="https://64.media.tumblr.com/1c0460de6467e00e4e57a5cfb4d86363/8baf8adf36b43663-c9/s1280x1920/d5362afc5e58b7767e86d6882edd2b05e60c5463.png">
         </div>
 
-        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display in my streams.  I wanted something bright, colorful, and cute that matched the aesthetics of my channel. These were them imported into After Effects where I did the motion graphics and created all the background assets. </p>
+        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display in my streams.  I wanted something bright, colorful, and cute that matched the aesthetics of my channel. These were then imported into After Effects where I did the motion graphics and created all the background assets. The full video is 48 seconds and loops.</p>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/I6d5S/f64972c596.mp4" type="video/mp4">
+            <source src="https://puu.sh/I6dtX/7791182c4c.mp4" type="video/mp4">
           </video>
         </div>
         <div class="full-image loading-icon">
