--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -95,7 +95,9 @@
           <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://media.giphy.com/media/U3yt6n8qCg4WwkQG1o/source.gif">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/I6dyj/59837c709b.mp4" type="video/mp4">
+          </video>
         </div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/I6cDA/79256d9367.mp4" type="video/mp4">
