--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
     </div>
     <div class="item">
       <a href="gaming.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/STeuUlOeXvTFOm8aUL/source.gif" alt="youtube commissions"></div>
-        <span>Gaming Commissions</span>
+        <div class="image-container loading-icon">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/I6dDW/ca88865c71.mp4.mp4" type="video/mp4">
+          </video>
+        </div>
+        <span>Youtube Intro/Outro Commissions</span>
+        
       </a>
     </div>
     <div class="item">
