--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -113,9 +113,11 @@
         <div class="art-sub-header">
           <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in After Effects and then preparing the lower thirds as time responsive .MOGRT templates for Premiere Pro use.</p>
         </div>
-        <div class="full-image loading-icon">
-          <img src="https://media.giphy.com/media/W30U221RorPJVDypsY/source.gif">
-        </div>
+        <video width="100%" autoplay muted loop>
+          <source src="
+          https://puu.sh/I6dAO/10581c43bb.mp4" type="video/mp4">
+        </video>
+
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/I6cHT/eb7fd8abb7.mp4" type="video/mp4">
         </video>
