--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="item">
       <a href="gaming.html">
         <div class="image-container loading-icon">
-          <video width="100%" autoplay muted loop>
+          <video autoplay muted loop>
             <source src="https://puu.sh/I6dDW/ca88865c71.mp4.mp4" type="video/mp4">
           </video>
         </div>
