--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -117,7 +117,7 @@
           <source src="
           https://puu.sh/I6dAO/10581c43bb.mp4" type="video/mp4">
         </video>
-      </div>
+      </div><br>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/I6cHT/eb7fd8abb7.mp4" type="video/mp4">
         </video>
