--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
     </div>
     <div class="item">
       <a href="gaming.html">
-        <div class="image-container loading-icon">
-          <video autoplay muted loop>
-            <source src="https://puu.sh/I6dDW/ca88865c71.mp4.mp4" type="video/mp4">
-          </video>
-        </div>
+        <div class="image-container loading-icon"><img src="https://puu.sh/I6dI7/d4e06908cd.gif" alt="gaming"></div>
         <span>Youtube Intro/Outro Commissions</span>
         
       </a>
