--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -122,7 +122,7 @@
           <source src="https://puu.sh/I6cHT/eb7fd8abb7.mp4" type="video/mp4">
         </video>
          <!-- Row 4 -->
-         <div class="art-sub-header">
+         <div class="art-sub-header"><br>
           <p>Multiple name bars were created for use with up to 4 hosts.  These namebars were templatized so that the video editor(s) could toggle on and off up to 4 namebars.</p>
         </div>
         <div class="full-image loading-icon">
