--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
           </div>
           <!-- LinkedIn -->
           <div class="social-account">
-            <a target="_blank" href="https://www.linkedin.com/in/kathleen-oum/">
+            <a target="_blank" href="https://www.linkedin.com/in/kat-o/">
               <img class="social-icon" src="img/linkedin.svg" alt="dribbble">
               <h3>LinkedIn</h3>
             </a>
