--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   <div id="content">
     <div id="about-content">
       <div>
-        <img src="https://media.giphy.com/media/1fnXwFSw0wsRNqRTQk/source.gif">
+        <img src="https://puu.sh/I6e42/23039b6ecd.png">
       </div>
       <div>
           <h2>Hello, I'm Kathleen!</h2>
