--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
       <div>
           <h2>Hello, I'm Kathleen!</h2>
 
-          <p>I'm a designer based in Orange County with a passion for art, animation, video games, and anime. I love exploring ways design and motion can connect brands with communities, as well as how it shapes our experiences with products both on and off the screen. </p>
-          <p>Outside of work, I do freelance work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, animated art, and videos.</p>
-          <p>In my free time, you can find me <s>staring at Reddit all day</s> streaming Genshin Impact, catching Pokemon, attending anime conventions, and buying more plushies.</p>
+          <p>I'm a designer with a passion for art, anime, video games, and collecting plushies. I love exploring ways design and motion can connect brands with communities, artists, and entertainers.  I believe in supporting creatives and doing what I can to boost those voices. </p>
+          <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers.</p>
+          <p>In my free time, you can find me <s>scrolling through the depths of TikTok</s> streaming Genshin Impact, attending anime conventions, and trying to not impulse buy more plushies.</p>
 
           <p><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></p>
       </div>
