--- a/art.html
+++ b/art.html
@@ -48,14 +48,21 @@
   </div>
 
   <div id="content">
-    <!-- Section 1 -->
+
     <div class="art-section">
       <div class="art-header">
-        <h2>Vector Art</h2>
-        <p>Static and animated vector art mainly inspired by video games and anime.</p>
+        <h2>Personal Art</h2>
+        <p>A collection of vector, digital, and motion graphics I've done for fun.  Many of these are inspired by video games, anime, and other fandoms!</p>
         <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
+         <!-- Row 0 -->
+         <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/9690314/media/604f62e185cc365e6c65e252997dfb1a.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://cdn.dribbble.com/users/808936/screenshots/9899695/media/97e0d5a6277b4eb644ccd6f10a41c9ac.jpg?compress=1&resize=800x600">
+        </div>
         <!-- Row 1 -->
         <div class="half-image loading-icon">
           <img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif">
