--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="item">
       <a href="vector.html">
         <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
-        <span>Vector Art</span>
+        <span>Personal Art</span>
       </a>
     </div>
     <div class="item">
