--- a/art.html
+++ b/art.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Personal Art</h2>
-        <p>A collection of vector, digital, and motion graphics I've done for fun.  Many of these are inspired by video games, anime, and other fandoms!</p>
+        <p>A collection of vector, digital, and motion graphics I've done for fun.</p>  <p>Many of these are inspired by video games, anime, and other fandoms!</p>
         <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
