--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
   <div id="content">
     <!-- Row 1 -->
     <div class="item">
-      <a href="vector.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
+      <a href="art.html">
+        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="art"></div>
         <span>Personal Art</span>
       </a>
     </div>
     <div class="item">
       <a href="gaming.html">
         <div class="image-container loading-icon"><img src="https://puu.sh/I6dI7/d4e06908cd.gif" alt="gaming"></div>
-        <span>Youtube Intro/Outro Commissions</span>
+        <span>Youtube and Twitch Commissions</span>
         
       </a>
     </div>
