--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       <div>
           <h2>Hello, I'm Kathleen!</h2>
 
-          <p>I'm a designer with a passion for art, anime, video games, and collecting plushies. I love exploring ways design and motion can connect brands with communities, artists, and entertainers.  I believe in supporting creatives and doing what I can to boost those voices. </p>
+          <p>I'm a designer living in Orange County, CA with a passion for art, anime, video games, and collecting plushies. I love exploring ways design and motion can connect brands with communities, artists, and entertainers.  I believe in supporting creatives and doing what I can to boost those voices. </p>
           <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers.</p>
           <p>In my free time, you can find me <s>scrolling through the depths of TikTok</s> streaming Genshin Impact, attending anime conventions, and trying to not impulse buy more plushies.</p>
 
