--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <img src="https://puu.sh/I6e42/23039b6ecd.png">
       </div>
       <div>
-          <h2>Hello, I'm Kathleen!</h2>
+          <h2>Hello, I'm Kathleen! ✨</h2>
 
           <p>I'm a designer living in Orange County, CA with a passion for art, anime, video games, and collecting plushies. I love exploring ways design and motion can connect brands with communities, artists, and entertainers.  I believe in supporting creatives and doing what I can to boost those voices. </p>
           <p>Outside of work, I do freelance work for clients ranging from YouTube content creators to Twitch streamers.</p>
