--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -52,9 +52,8 @@
     <div class="art-section">
         <div class="art-sub-header">
           <div class="full-image loading-icon">
-            <img src="https://i.imgur.com/fiFZwUe.png">
+            <img src="https://i.imgur.com/fiFZwUe.png" width=95%>
           </div>
-            <h2>Up at Noon</h2>
           <p>Animated and designed video graphics for IGN's rebooted <b>Up at Noon</b>, a weekly pop culture variety show hosted by Brian Altano and Max Scoville. </p>
           <p>-</p>
           <p>Logo design and art direction: Justin Vachon</p>
