--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -77,7 +77,7 @@
       <div class="art-display">
         <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the finalized logo was created by Justin Vachon, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
+          <p>Once the logo was finalized, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
         
           <br>
           <p>Frame by frame paint splatter animation by Jack Taylor.</p>
