--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <div class="item">
       <a href="anime-omake.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
-        <span>Anime Omake - IGN Video Series</span>
+        <span>IGN's Anime Omake</span>
       </a>
     </div>
           <div class="item">
             <a href="up-at-noon.html">
               <div class="image-container loading-icon"><img src="https://media.giphy.com/media/hrXqOivq9pYBMz0w5Q/source.gif" alt="up at noon"></div>
-              <span>Up at Noon Animations - IGN Video Series</span>
+              <span>IGN's Up at Noon</span>
             </a>
           </div>
   
@@ -91,8 +91,8 @@
 
        <div class="item">
           <a href="party-chat.html">
-            <div class="image-container loading-icon"><img src="https://i.imgur.com/SZCSmYI.gif" alt="partychat"></div>
-              <span>IGN Live at E3 - Booth Monitors</span>
+            <div class="image-container loading-icon"><img src="https://i.imgur.com/z4NkqgK.gif" alt="partychat"></div>
+              <span>IGN's Party Chat</span>
              </a>
         </div>
 
@@ -111,7 +111,7 @@
       <div class="item">
         <a href="suiting-up.html">
           <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/388a4dd46dcb3f19483e1c065ebd2953/tumblr_pujwwcSWhZ1tmp8rdo10_r1_400.png" alt="suiting up"></div>
-          <span>Suiting Up - IGN Video Series</span>
+          <span>IGN's Suiting Up</span>
         </a>
       </div>
      <div class="item">
