--- a/party-chat.html
+++ b/party-chat.html
@@ -60,7 +60,7 @@
         </div>
         <div class="full-image loading-icon">
           <div class="embed-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=kq3z6FXVlsc" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kq3z6FXVlsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
       </div><br>
       
