--- a/gaming.html
+++ b/gaming.html
@@ -51,7 +51,7 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>YouTube & Twitch Gaming Commissions</h2>
+        <h2>YouTube & Twitch Commissions</h2>
         <p>Select commissions done for gaming streamers.
           Static character art was provided by clients with permission to animate.</p>
       </div>
