--- a/anime-omake.html
+++ b/anime-omake.html
@@ -55,7 +55,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg">
+          <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" width=50%>
         </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
@@ -83,12 +83,8 @@
         <div class="art-sub-header">
           <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/a5657092d06e9da3233895b6f6d5a57d/tumblr_pentg9IwJr1tmp8rdo1_r1_1280.png"></div><br>
-          <p>The first part was to establish a look and feel for the set, which meant designing the the video wall that appears behind the hosts and the desk strip in front of the hosts.  Stakeholders knew they wanted something purple and yellow and with either panels to represent manga or anime items/symbols with the potential to have these animate. </p>  <br> <p>Below are first drafts of my take on the manga/panel theme: </p>
+          <p>The first part was to establish a look and feel for the set, which meant designing the the video wall that appears behind the hosts and the desk strip in front of the hosts.  Stakeholders knew they wanted something purple and yellow and with either panels to represent manga or anime items/symbols with the potential to have these animate. </p>  <br>
         </div>
-        <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/zzcE7HT.png">
-        </div>
-        <p>I found the above box layout to be too many things happening at once and not enough visual engagement for the viewer so I lessened the amount of boxes and made them more angular for more impact.</p>
         <div class="full-image loading-icon">
             <img src="https://i.imgur.com/ZCtQK0n.png">
           </div>
@@ -107,42 +103,18 @@
                 <div class="quarter-image loading-icon">
                     <img src="https://i.imgur.com/5BkoXnc.jpg">
                   </div>
-           <p>Panel color and style explorations:</p>
-          <div class="art-display">
-              <!-- Row 1 -->
-              <div class="half-image loading-icon">
-                <img src="https://i.imgur.com/H4kPDMK.png">
-              </div>
-              <div class="half-image loading-icon">
-                <img src="https://i.imgur.com/ky0qtVP.png">
-              </div>
-              <div class="half-image loading-icon">
-                  <img src="https://i.imgur.com/2F5Cewe.png">
-              </div>
-              <div class="half-image loading-icon">
-                  <img src="https://i.imgur.com/MRvlNuF.png">
-              </div>
-              <div class="half-image loading-icon">
-                  <img src="https://i.imgur.com/AeP7H8m.png">
-              </div>
-              <div class="half-image loading-icon">
-                  <img src="https://i.imgur.com/MCUWFsi.png">
-              </div>
+    
 
-              <p>Next were first drafts for the anime objects/symbols theme:</p>
+              <p>Next were drafts for the anime objects/symbols theme:</p>
           <div class="art-display">
               <!-- Row 1 -->
               <div class="full-image loading-icon">
                 <img src="https://i.imgur.com/4viTz3M.png">
               </div>
-              <div class="full-image loading-icon">
-                  <img src="https://i.imgur.com/LimI1ht.png">
-                </div>
 
         <!-- Row 6 -->
-        <p>After feedback, stakeholders went with the patterned look as to evoke more anime and less manga. I masked out several more anime objects, darkened the purple, and placed them in a way that balanced space with items not overpowering eachother.  An orange halftone was added for some depth. All art was taken from episode screencaps or official art. No fanart was used.</p>
+        <p>After feedback, stakeholders went with the patterned look as to evoke more anime and less manga. I masked out several more anime objects, animated them, darkened the purple, and placed them in a way that balanced space with items not overpowering eachother.  An orange halftone was added for some depth. All art was taken from episode screencaps or official art. No fanart was used.</p>
         <div class="art-sub-header">
-          <p>Animated version of the video wall that appears in episodes 3 and 4.  Objects move or shine.</p>
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
