--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
       </div>
                  <!-- Row 3 -->
 
+      <div class="item">
+        <a href="devs-react.html">
+           <div class="image-container loading-icon"><img src="https://i.imgur.com/5zBNWYa.gif" alt="devsreact"></div>
+           <span>IGN's Devs React to Speedruns</span>
+             </a>
+        </div>
+        
+
        <div class="item">
           <a href="party-chat.html">
             <div class="image-container loading-icon"><img src="https://i.imgur.com/z4NkqgK.gif" alt="partychat"></div>
