--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="item">
         <a href="devs-react.html">
            <div class="image-container loading-icon"><img src="https://i.imgur.com/5zBNWYa.gif" alt="devsreact"></div>
-           <span>IGN's Devs React to Speedruns</span>
+           <span>IGN's Devs React & Experts React</span>
              </a>
         </div>
         
