--- a/devs-react.html
+++ b/devs-react.html
@@ -57,7 +57,7 @@
           <p>Watch an episode below:</p>
         </div>
         <div class="full-image loading-icon">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/PH2-oM7IWpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/PH2-oM7IWpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
       </div><br>
       
