--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="index.html">Kathleen Oum</a></h1>
+      <img src="img/ko.svg" alt="KATHLEEN OUM">
     </div>
     <div id="menu">
       <div id="menu-hamburger" class="menu-closed">
