--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-<img src="img/ko.svg" alt="KATHLEEN OUM">
+      <span><a class="active-link" href="/"><img src="img/ko.svg" alt="KATHLEEN OUM"></a>
     </div>
     <div id="menu">
       <div id="menu-hamburger" class="menu-closed">
