--- a/ads.html
+++ b/ads.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="/">Kathleen Oum</a></h1>
+      <span><a class="active-link" href="/"><img src="img/ko.svg" alt="KATHLEEN OUM"></a>
 <h2>
     </div>
     <div id="menu">
