--- a/devs-react.html
+++ b/devs-react.html
@@ -57,8 +57,10 @@
           <p>Watch an episode below:</p>
         </div>
         <div class="full-image loading-icon">
-          <iframe src="https://www.youtube.com/embed/PH2-oM7IWpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="embed-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/PH2-oM7IWpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+        </div>
       </div><br>
       
       <hr>
