--- a/anime-omake.html
+++ b/anime-omake.html
@@ -51,19 +51,13 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-      </div>
-      <div class="art-display">
-        <!-- Row 1 -->
-        <div class="full-image loading-icon">
-          <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" width=50%>
+        <div class="full-image">
+          <img src="https://78.media.tumblr.com/7499144b65be14fffcfd2eb4dd928cf3/tumblr_peah1mrEIV1tmp8rdo6_r1_1280.jpg" width=65%>
         </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
-          <p>Designed and animated all graphics related to the IGN miniseries <a class="active-link" target="_blank" href="https://www.ign.com/watch/anime-omake">Anime Omake</a>, a series focused on discussing and recommending the latest and greatest anime.</p>
-          <p>-</p>
-          <p>Art direction: Gian Cruz</p>
-          <p>Design and animation: Kathleen Oum</p>
-          <p>-</p>
+          <p>Designed and animated all graphics related to the IGN miniseries <b>Anime Omake</b>, a series focused on discussing and recommending the latest and greatest anime.</p>
+<br>
           <p>Watch an episode below:</p>
         </div>
         <div class="full-image loading-icon">
