--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -96,7 +96,7 @@
         <div class="art-sub-header">
           <p>Early transition drafts focused on the paint splatters covering the screen, but it was narrowed down to multicolored triangles from the logo and a wipe over the abstract memphis background from the intro.</p>
         </div>
-        <div class="full-image loading-icon">
+        <div class="full-image">
           <video width="100%" autoplay muted loop>
             <source src="https://puu.sh/I6dyj/59837c709b.mp4" type="video/mp4">
           </video>
