--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -55,11 +55,7 @@
             <img src="https://i.imgur.com/fiFZwUe.png" width=95%>
           </div>
           <p>Animated and designed video graphics for IGN's rebooted <b>Up at Noon</b>, a weekly pop culture variety show hosted by Brian Altano and Max Scoville. </p>
-          <p>-</p>
-          <p>Logo design and art direction: Justin Vachon</p>
-          <p>Animation and video graphics design: Kathleen Oum</p>
-          <p>Animation support: Jack Taylor</p>
-          <p>-</p>
+<br>
           <p>Watch an episode below:</p>
         </div>
         <div class="full-image loading-icon">
@@ -77,7 +73,7 @@
       <div class="art-display">
         <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the logo was finalized, I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
+          <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
         
           <br>
           <p>Frame by frame paint splatter animation by Jack Taylor.</p>
