--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
           <p>I'm a designer/mograph gal living in Orange County, CA who has a passion for art, anime, video games, and collecting plushies. I love exploring ways design and motion can connect brands with communities, artists, and entertainers. </p>
           <p>Outside of work, I do freelance design and animation work for clients ranging from YouTube content creators to Twitch streamers and vtubers. </p>
-          <p>In my free time, you can find me <s>scrolling through the depths of TikTok</s> streaming Genshin Impact, trying to not impulse buy more plushies, and binge watching anime.  What anime would I recommend? Fullmetal Alchemist: Brotherhood, Demon Slayer, and Death Parade for starters 😌</p>
+          <p>In my free time, you can find me <s>scrolling through the depths of TikTok</s> streaming Genshin Impact, trying to not impulse buy more plushies, and binge watching anime 😌</p>
 
           <p><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></p>
       </div>
