--- a/contact.html
+++ b/contact.html
@@ -53,34 +53,9 @@
       </div>
       <div id="contact-intro">
         <h2>Wanna chat?</h2>
-        <p>Feel free to fill out the contact form, e-mail me at <a class="active-link" href="mailto:kathleen.oum@gmail.com">kathleen.oum@gmail.com</a>, or message me through my social media.</p>
+        <p>Feel free to fill out the contact form or e-mail me at <a class="active-link" href="mailto:kathleen.oum@gmail.com">kathleen.oum@gmail.com</a></p>
       </div>
-      <div id="contact-social">
-        <h2>Connect</h2>
-        <div>
-          <!-- Twitter -->
-          <div class="social-account">
-            <a target="_blank" href="https://twitter.com/kaeveeoh">
-              <img class="social-icon" src="img/twitter.svg" alt="twitter">
-              <h3>Twitter</h3>
-            </a>
-          </div>
-          <!-- Dribble -->
-          <div class="social-account">
-            <a target="_blank" href="https://dribbble.com/kaeveeoh">
-              <img class="social-icon" src="img/dribbble.svg" alt="dribbble">
-              <h3>Dribbble</h3>
-            </a>
-          </div>
-          <!-- LinkedIn -->
-          <div class="social-account">
-            <a target="_blank" href="https://www.linkedin.com/in/kat-o/">
-              <img class="social-icon" src="img/linkedin.svg" alt="dribbble">
-              <h3>LinkedIn</h3>
-            </a>
-          </div>
-        </div>
-      </div>
+     
     </div>
     <!-- Form -->
     <div id="form-section">
