--- a/twitch.html
+++ b/twitch.html
@@ -61,10 +61,10 @@
           <img src="https://64.media.tumblr.com/2382e1b6d7fda16678b288095d39f563/8baf8adf36b43663-4d/s1280x1920/bad7c50f0dc57986f169ab305f378a65c7b6608a.png">
         </div>
 
-        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display in my streams.  I wanted something bright, colorful, and cute that matched the aesthetics of my channel. These were then imported into After Effects where I did the motion graphics and created all the background assets. The full video is 48 seconds and loops.</p>
+        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display on my camera. These were then imported into After Effects where I did the motion graphics and created all the background assets.</p>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/I6dtX/7791182c4c.mp4" type="video/mp4">
+            <source src="https://puu.sh/J8DWq/d22887f4e5.mp4" type="video/mp4">
           </video>
         </div>
         <div class="full-image loading-icon">
