--- a/twitch.html
+++ b/twitch.html
@@ -53,7 +53,7 @@
       <div class="art-header">
         <h2>Twitch Channel Branding</h2>
         <p>
-          Design and animation I did for my own personal Twitch channel's branding.<br>
+          Design and animation I did for my own personal Twitch channel's branding in 2021.<br>
           Below are my profile panels that I designed in Illustrator.  I wanted something simple, consistent, and eyecatching.</p>
       </div>
       <div class="art-display">
@@ -61,7 +61,7 @@
           <img src="https://64.media.tumblr.com/2382e1b6d7fda16678b288095d39f563/8baf8adf36b43663-4d/s1280x1920/bad7c50f0dc57986f169ab305f378a65c7b6608a.png">
         </div>
 
-        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display on my camera. These were then imported into After Effects where I did the motion graphics and created all the background assets.</p>
+        <p>For my Starting Soon screen, which plays at the start of my livestreams, I made vectors of my plushies that I display on my camera. These were then imported into After Effects where I did the motion graphics and created all the background assets. The full video is 48 seconds long!</p>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
             <source src="https://puu.sh/J8DWq/d22887f4e5.mp4" type="video/mp4">
