--- a/art.html
+++ b/art.html
@@ -56,6 +56,11 @@
         <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
+        <div class="full-image loading-icon">
+          <video width="100%" autoplay muted loop>
+            <source src="https://puu.sh/J8DZZ/b6dd268b0e.mp4" type="video/mp4">
+          </video>
+        </div>
          <!-- Row 0 -->
          <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/9690314/media/604f62e185cc365e6c65e252997dfb1a.gif">
