--- a/art.html
+++ b/art.html
@@ -53,7 +53,6 @@
       <div class="art-header">
         <h2>Personal Art</h2>
         <p>A collection of vector, digital, and motion graphics I've done for fun.</p>  <p>Many of these are inspired by video games, anime, and other fandoms!</p>
-        <p>Details and more can be found on my <a class="active-link" target="_blank" href="https://dribbble.com/kaeveeoh">Dribbble page</a>.</p>
       </div>
       <div class="art-display">
         <div class="full-image loading-icon">
@@ -150,6 +149,9 @@
         </div>
         <div class="half-image loading-icon">
           <img src="https://cdn.dribbble.com/users/808936/screenshots/3445208/ice-cream-dribbble.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/rHKr9RR.png">
         </div>
       </div>
       <hr>
