--- a/devs-react.html
+++ b/devs-react.html
@@ -148,7 +148,7 @@
                     </div> 
 
                     <video width="100%" autoplay muted loop>
-                      <source src="https://puu.sh/I7mgu/919f131a02.mp4" type="video/mp4">
+                      <source src="https://puu.sh/J8E3k/48fdc69832.mp4" type="video/mp4">
                     </video>
       </div>
 
