--- a/devs-react.html
+++ b/devs-react.html
@@ -99,7 +99,7 @@
             </div> 
 
             <video width="100%" autoplay muted loop>
-              <source src="https://puu.sh/I7m7X/5e081050eb.mp4" type="video/mp4">
+              <source src="https://puu.sh/J8E5v/489ed1823f.mp4" type="video/mp4">
             </video>
 
           <div class="art-section"><br>
