--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -80,7 +80,7 @@
         
         </div> 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I6cBY/28aaff98c7.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8E75/60300cb098.mp4" type="video/mp4">
         </video>
       </div>
 
@@ -94,7 +94,7 @@
         </div>
         <div class="full-image">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/I6dyj/59837c709b.mp4" type="video/mp4">
+            <source src="https://puu.sh/J8E7r/3691208413.mp4" type="video/mp4">
           </video>
         </div>
         <video width="100%" autoplay muted loop>
@@ -113,10 +113,10 @@
         </div>
         <video width="100%" autoplay muted loop>
           <source src="
-          https://puu.sh/I6dAO/10581c43bb.mp4" type="video/mp4">
+          https://puu.sh/J8E63/67426d7343.mp4" type="video/mp4">
         </video>
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I6cHT/eb7fd8abb7.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8E6E/e45857804a.mp4" type="video/mp4">
         </video>
          <!-- Row 4 -->
          <div class="art-sub-header"><br>
