--- a/party-chat.html
+++ b/party-chat.html
@@ -103,7 +103,7 @@
           <div class="full-image loading-icon">
 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7lnK/af3ce0b0f2.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8EfF/5420a50601.mp4" type="video/mp4">
         </video></div>
 
         <div class="full-image loading-icon">
