--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -73,10 +73,8 @@
       <div class="art-display">
         <!-- Intro -->
         <div class="art-sub-header">
-          <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations.  Feedback was given to add motion blur and touch ups to the logo animation.</p>
-        
-          <br>
-          <p>Frame by frame paint splatter animation by Jack Taylor.</p>
+          <p>Once the logo was finalized by our senior designer (Justin Vachon), I was given direction to make an intro that was 90s-Nickolodeon-meets-modern inspired with Double Dare and slime being the main influence. I used the paint splatter in the logo as my main source of inspiration for choosing background colors and shapes, opening animations, and logo animations. Frame by frame paint splatter animation by Jack Taylor.</p>
+
         
         </div> 
         <video width="100%" autoplay muted loop>
@@ -98,7 +96,7 @@
           </video>
         </div>
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I6cDA/79256d9367.mp4" type="video/mp4">
+          <source src="https://puu.sh/J8E9g/477c057aa4.mp4" type="video/mp4">
         </video>
           <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
