--- a/party-chat.html
+++ b/party-chat.html
@@ -74,7 +74,7 @@
         </div> 
         
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/I7kHR/5c8a0cdf79.mp4" type="video/mp4">
+          <source src="https://i.imgur.com/wVkswWV.gif" type="video/mp4">
         </video>
       </div>
 
@@ -105,6 +105,9 @@
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/J8EfF/5420a50601.mp4" type="video/mp4">
         </video></div>
+        <div class="half-image loading-icon">
+          <img src="https://i.imgur.com/PUaLgCs.jpeg">
+        </div>
 
         <div class="full-image loading-icon">
         <video width="100%" autoplay muted loop>
